Proyecto el surtidon funcionando con 4 pantallas consultar, modificar, crear y menu la pantalla crear aun no funciona

--- a/surtidon-war/web/css/estilo.css
+++ b/surtidon-war/web/css/estilo.css
@@ -5,7 +5,9 @@
     Description:
         Purpose of the stylesheet follows.
 */
-
+h1 {
+    color: #FF0000;
+}
 th {
         background-color: #0000ff;
         color: #fafafa;
